--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "file:C:/Users/AlmikSS/Downloads/com.unity.netcode.gameobjects-ngo-1.11.0/com.unity.netcode.gameobjects-ngo-1.11.0/com.unity.netcode.gameobjects",
+    "com.unity.remote-config": "4.1.1",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.relay": "1.1.1",
