--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,8 +7,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.9.0",
     "com.unity.multiplayer.tools": "2.1.0",
-    "com.unity.netcode": "1.2.4",
-    "com.unity.netcode.gameobjects": "file:C:/Users/AlmikSS/Downloads/com.unity.netcode.gameobjects-ngo-1.11.0/com.unity.netcode.gameobjects-ngo-1.11.0/com.unity.netcode.gameobjects",
+    "com.unity.netcode.gameobjects": "file:D:/GltSU/Downloads/Telegram Desktop/com.unity.netcode.gameobjects-ngo-1.11.0/com.unity.netcode.gameobjects",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.relay": "1.1.1",
