--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.multiplayer.playmode": "1.3.0-pre.3",
     "com.unity.multiplayer.tools": "2.2.1",
     "com.unity.netcode.gameobjects": "2.0.0",
+    "com.unity.probuilder": "6.0.4",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.relay": "1.1.1",
