--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -14,6 +14,7 @@
     "com.unity.multiplayer.tools": "2.2.1",
     "com.unity.netcode.gameobjects": "2.0.0",
     "com.unity.probuilder": "6.0.4",
+    "com.unity.remote-config": "4.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.relay": "1.1.1",
